# agent-toolkit-for-kapitan

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY-REVIEW.md  SECURITY.md  glama.json  mise.toml  server.json
.claude-plugin/: marketplace.json
docs/: README.md  (+4 more)
tools/kapitan-mcp/: README.md  pyproject.toml
tools/kapitan-mcp/src/kapitan_mcp/: __init__.py  errors.py  models.py  project.py  runner.py  server.py
tools/kapitan-mcp/src/kapitan_mcp/tools/: __init__.py  compile.py  generators.py  inventory.py  lint.py  refs.py  search.py
tools/kapitan-mcp/tests/: conftest.py
tools/kapitan-mcp/tests/e2e/: test_stdio_e2e.py
tools/kapitan-mcp/tests/fixtures/mini-inventory/: .kapitan
tools/kapitan-mcp/tests/fixtures/mini-inventory/compiled/dev/: config.yml.j2
tools/kapitan-mcp/tests/fixtures/mini-inventory/compiled/prod/: config.yml.j2
tools/kapitan-mcp/tests/fixtures/mini-inventory/components/mycomponent/: config.yml.j2
tools/kapitan-mcp/tests/fixtures/mini-inventory/inventory/classes/: common.yml
tools/kapitan-mcp/tests/fixtures/mini-inventory/inventory/targets/: dev.yml  prod.yml
tools/kapitan-mcp/tests/fixtures/omega-inventory/: .kapitan
tools/kapitan-mcp/tests/fixtures/omega-inventory/compiled/dev/: config.yml.j2
tools/kapitan-mcp/tests/fixtures/omega-inventory/compiled/prod/: config.yml.j2
tools/kapitan-mcp/tests/fixtures/omega-inventory/components/mycomponent/: config.yml.j2
tools/kapitan-mcp/tests/fixtures/omega-inventory/inventory/: resolvers.py
tools/kapitan-mcp/tests/fixtures/omega-inventory/inventory/classes/: common.yml
tools/kapitan-mcp/tests/integration/: test_compile_integration.py  test_kapitan_integration.py  test_plugin_cli.py
tools/kapitan-mcp/tests/unit/: test_compile.py  test_compile_diff.py  test_error_translation.py  test_errors.py  test_generator_schema.py  test_generators.py  test_install_skills.py  test_inventory_tools.py  test_project.py  test_refs.py  test_runner.py  test_search.py  test_security_invariants.py  test_server.py  test_sync_plugins.py  test_validate_skills.py
(+76 files in other folders)
