[project]
name = "kapitan-mcp-server"
version = "0.0.0"   # rolling main: no release tags, single static version
description = "MCP server that lets AI agents inspect, compile, and diff Kapitan projects safely."
readme = "README.md"
requires-python = ">=3.10,<3.15"   # track Kapitan's own constraint
license = "Apache-2.0"
authors = [{ name = "kapicorp" }]
dependencies = [
    "mcp>=1.2",
    "pydantic>=2",
    "structlog>=24",
    "pyyaml>=6",
]

[project.optional-dependencies]
kapitan = ["kapitan"]   # optional: users may use the ./kapitan docker wrapper instead
# Pinned to the version the unpinned `kapitan` extra currently resolves to, so both
# extras can be installed together without pulling a second kapitan version that
# triggers a jsonnet/rapidyaml source build. Bump in lockstep if `kapitan` moves.
test-backends = ["kapitan[omegaconf,reclass-rs]==0.36.2", "omegaconf>=2.4.0.dev3"]

[project.scripts]
kapitan-mcp-server = "kapitan_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kapitan_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=2.2.0",
    "ruff>=0.6",
    "types-PyYAML>=6",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N", "PT", "RUF"]   # S = bandit security rules

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # asserts are expected in tests
# This suite deliberately shells out to the trusted local client CLIs with static args.
"tests/integration/test_plugin_cli.py" = ["S101", "S603", "S607"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=kapitan_mcp --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
markers = [
    "integration: requires a real kapitan CLI",
    "e2e: full MCP protocol over stdio",
    "plugin_cli: drives a real client CLI (claude/codex) to install from the marketplace",
]
